fix: The product navigation bar is fixed to the top with highest z-index

--- a/src/scss/modules/_header.component.scss
+++ b/src/scss/modules/_header.component.scss
@@ -4,6 +4,7 @@
   position: fixed;
   top: 0;
   width: 100vw;
+  z-index: 1000;
 
   &__wrapper {
     @include flexBoxRow;
